--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "nodejs-audio-streaming",
   "version": "1.0.0",
   "description": "",
-  "exports": "./index.js",
-  "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
